Expense Component completed

--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <div>
     <ul>
-        <li><a><i class="fa fa-line-chart"></i>Dashboard</a></li>
-        <li><a><i class="fa fa-credit-card-alt"></i>View Transactions</a></li>
-        <li><a [routerLink]="['/Income']"><i class="fa fa-money"></i>Incomes</a></li>
-        <li><a [routerLink]="['/Expense']"><i class="fa fa-cc-mastercard"></i>Expenses</a></li>
+        <li><a><i class="icon fa fa-line-chart"></i>Dashboard</a></li>
+        <li><a><i class="icon fa fa-credit-card-alt"></i>View Transactions</a></li>
+        <li><a [routerLink]="['/Income']"><i class="icon fa fa-money"></i>Incomes</a></li>
+        <li><a [routerLink]="['/Expense']"><i class="icon fa fa-cc-mastercard"></i>Expenses</a></li>
     </ul>
 </div>
