--- a/src/app/component/expense/expense.component.html
+++ b/src/app/component/expense/expense.component.html
@@ -1,1 +1,54 @@
-<p>expense works!</p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<div class="box">
+    <div class="headerDiv">
+        <h1 class="header">Expenses</h1>
+    </div>
+    <div class="totalExpense">
+        <p class="Padding">Total Expense:${{totalExpense}}</p>
+    </div>
+    <div class="container">
+        <div class="Form">
+            <form [formGroup]="expenseForm" enctype="multipart/form-data" (ngSubmit)="addExpense()">
+                <input type="text" formControlName="expenseTitle" placeholder="Expense Title"><br>
+                <input type="text" formControlName="expenseAmount" placeholder="Expense Amount"><br>
+                <input type="text" formControlName="expenseDate" onfocus="(this.type='date')" placeholder="Enter A Date"><br>
+                <select formControlName="expenseCategoryID">
+                    <option value="option1" selected>Select your Option</option>
+                    <option value="{{item.expenseCategoryID}}" *ngFor="let item of expenseCategoryList">{{item.categoryName}}</option>
+                </select><br>
+                <textarea type="text" formControlName="expenseReference" placeholder="Add a Reference"></textarea><br>
+                <button type="submit"><i class="fa fa-plus"></i>Add</button>
+            </form>
+        </div>
+        <div class="expenseContainer OverFlow" id="style-3">
+            <div class="Expense" *ngFor="let dataList of expenseList">
+                <div class="circle"></div>
+                <div class="ExpenseTitle">
+                    <p class="ExpenseParagraph">{{dataList.expenseTitle}}</p>
+                </div>
+                <div class="amount">
+                    <i class="fa fa-dollar" style="color: white;"></i>
+                    <p class="txtAmount">{{dataList.expenseAmount}}</p>
+                </div>
+                <div class="dateIcon">
+                    <i class="fa fa-calendar"></i>
+                </div>
+                <div class="txtDate">
+                    <p style="width: 100px;">{{dataList.expenseDate}}</p>
+                </div>
+                <div class="commentIcon">
+                    <i class="fa fa-comment"></i>
+                </div>
+                <div class="txtReference">
+                    <p class="txtReferenceParagraph">{{dataList.expenseReference}}</p>
+                </div>
+                <div class="btnDeleteDiv">
+                    <button class="deleteBtn" (click)="deleteExpense(dataList.expenseID)">
+                        <i class="fa fa-trash" style="color:black;font-size:24px;"></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
