--- a/src/app/component/income/income.component.html
+++ b/src/app/component/income/income.component.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<div>
-    <div>
+<div class="box">
+    <div class="headerDiv">
         <h1 class="header">Incomes</h1>
     </div>
     <div class="totalIncome">
@@ -12,7 +12,7 @@
                 <input type="text" formControlName="salaryTitle" placeholder="Salary Title"><br>
                 <input type="text" formControlName="salaryAmount" placeholder="Salary Amount"><br>
                 <input type="text" formControlName="date" onfocus="(this.type='date')" placeholder="Enter A Date"><br>
-                <select formControlName="categoryID" [(ngModel)]="selectedOption">
+                <select formControlName="categoryID">
                     <option value="option1" selected>Select your Option</option>
                     <option value="{{item.categoryID}}" *ngFor="let item of categoryList">{{item.categoryName}}</option>
                 </select><br>
@@ -24,7 +24,7 @@
             <div class="Income" *ngFor="let dataList of incomeList">
                 <div class="circle"></div>
                 <div class="SalaryTitle">
-                    <p style="color: white; width:200px">{{dataList.salaryTitle}}</p>
+                    <p class="SalaryParagraph">{{dataList.salaryTitle}}</p>
                 </div>
                 <div class="amount">
                     <i class="fa fa-dollar" style="color: white;"></i>
@@ -40,7 +40,7 @@
                     <i class="fa fa-comment"></i>
                 </div>
                 <div class="txtReference">
-                    <p style="width: 254px;">{{dataList.reference}}</p>
+                    <p class="txtReferenceParagraph">{{dataList.reference}}</p>
                 </div>
                 <div class="btnDeleteDiv">
                     <button class="deleteBtn" (click)="deleteIncome(dataList.incomeId)">
