--- a/src/app/component/income/income.component.scss
+++ b/src/app/component/income/income.component.scss
@@ -3,6 +3,14 @@
     color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
+.headerDiv {
+    width: 1041px;
+}
+
+.box {
+    display: block;
+    width: 100%;
+}
 
 .totalIncome {
     display: block;
@@ -63,6 +71,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.SalaryParagraph {
+    color: white; 
+    width:200px;
+}
+
 .amount {
     display: flex;
     margin-top: 8%;
@@ -100,6 +113,10 @@
     width: 254px;
 }
 
+.txtReferenceParagraph {
+    width: 254px;
+}
+
 .btnDeleteDiv {
     margin-top: 6%;
     margin-left: 4%;
@@ -115,8 +132,10 @@
 
 .incomeContainer {
     display: block;
-    width: 100%;
+    width: 129%;
     height: 377px;
+    margin-left: 0%;
+    margin-right: -22%;
 }
 
 .Padding {
@@ -128,14 +147,14 @@
     //background-color: #242324;
     margin-top: 2%;
     margin-left: 5%;
-    margin-right: 0%;
+    margin-right: 2%;
     width: 600px;
 }
 
 
 .container {
     display: flex;
-    width: 1141px;
+    width: 898px;
     //width: 109.5%;
 }
 
@@ -177,4 +196,467 @@ button {
     border-radius: 20px;
     background-color: cornflowerblue;
     color: white;
+}
+
+
+@media (max-width: 1367px) {
+    .box {
+        width: 78.86%;
+    }
+
+    .Form {
+        margin-right: 1%;
+    }
+
+    .Padding {
+        padding-top: 3.5%;
+    }
+
+    .Income {
+        width: 60%;
+        margin-right: 0%;
+    }
+
+    .totalIncome {
+        width: 752px;
+    }
+
+    .circle {
+        display: none;
+    }
+
+    .amount {
+        margin-left: -49.5%;
+        margin-top: 11%;
+    }
+
+    .SalaryTitle {
+        margin-bottom: 0%
+    }
+
+    .dateIcon {
+        margin-top: 11%;
+    }
+
+    .txtDate {
+        margin-top: 7%;
+    }
+
+    .commentIcon { 
+        margin-top: 13.5%;
+        margin-left: -4%;
+        margin-right: 5%;
+    }
+
+    .txtReference {
+        width: 134px;
+        margin-top: 10.2%;
+        margin-left: -3%;
+    }
+
+    .txtReferenceParagraph {
+        height: inherit;
+    }
+}
+
+@media (max-width: 1200px) {
+
+    .box {
+        width: 78.86%;
+    }
+
+    .Form {
+        margin-right: 1%;
+    }
+
+    .Padding {
+        padding-top: 3.5%;
+    }
+
+    .Income {
+        width: 60%;
+        margin-right: 0%;
+    }
+
+    .totalIncome {
+        width: 752px;
+    }
+
+    .circle {
+        display: none;
+    }
+
+    .amount {
+        margin-left: -49.5%;
+        margin-top: 11%;
+    }
+
+    .SalaryTitle {
+        margin-bottom: 0%
+    }
+
+    .dateIcon {
+        margin-top: 11%;
+    }
+
+    .txtDate {
+        margin-top: 7%;
+    }
+
+    .commentIcon { 
+        margin-top: 13.5%;
+        margin-left: -4%;
+        margin-right: 5%;
+    }
+
+    .txtReference {
+        width: 134px;
+        margin-top: 10.2%;
+        margin-left: -3%;
+    }
+
+    .txtReferenceParagraph {
+        height: inherit;
+    }
+}
+
+@media (max-width: 992px) {
+
+    .box {
+        width: 736px;
+    }
+
+    .totalIncome {
+        width: 479px;
+        font-size: 16px;
+        padding-top: 1.5%;
+    }
+
+    .box {
+        width: 736px;
+    }
+
+    .container {
+        display: block;
+        width: 768px;
+    }
+
+    .header {
+        width: 100%;
+    }
+    
+    .headerDiv {
+        width: 430px;
+    }
+
+    .Form {
+        display: flex;
+        //background-color: #242324;
+        margin-top: 2%;
+        margin-left: 5%;
+        margin-right: 0%;
+        width: 250px;
+    }
+
+    form {
+        width: 250px;
+    }
+    
+    
+    .container {
+        display: block;
+        width: 250px;
+        margin-left: 19%;
+        //width: 109.5%;
+    }
+    
+    input {
+        border: none;
+        margin-top: 5%;
+        width: 250px;
+        height: 20px;
+        padding-left: 5%;
+    }
+    
+    
+    textarea {
+        border: none;
+        width:250px;
+        height: 50px;
+        padding-left: 5%;
+        margin-top: 5%;
+        resize: none;
+    }
+
+    select {
+        border: none;
+        margin-left: 52.641%;
+        margin-top: 5%;
+        height: 30px;
+    }
+    
+    button {
+        margin-top: 5%;
+        padding-top: 1%;
+        width: 40%;
+        height: 30px;
+        border: none;
+        border-radius: 20px;
+        background-color: cornflowerblue;
+        color: white;
+    }
+
+    .incomeContainer {
+        display: block;
+        width: 100%;
+        height: 147px;
+    }
+
+    .Income {
+        display: block;
+        background-color: #242324;
+        margin-top: 3.5%;
+        width: 94%;
+        height: initial;
+        border-radius: 30px;
+    }
+
+    .circle {
+        display: none;
+    }
+
+    .SalaryTitle {
+        display: block;
+        width: 100px;
+        height: 10%;
+        margin-top: 0%;
+        margin-bottom: 0%;
+        margin-left: 33%;
+        font-size: 13px;
+        text-align: justify;
+        font-weight: bold;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .SalaryParagraph {
+        color: white; 
+        width:100px;
+        margin-top: 0%;
+    }
+
+    .amount {
+        display: flex;
+        margin-top: 8%;
+        margin-left: 10.5%;
+    }
+
+    .txtAmount {
+        margin-top: -1%;
+        margin-left: -2%;
+        color: white;
+    }
+
+    .dateIcon {
+        margin-top: -16.3%;
+        margin-left: 41%;
+        color: white;
+    }
+    
+    .txtDate {
+        margin-top: -15.7%;
+        margin-left: 53%;
+        color: white;
+        width: 100px;
+    }
+
+    .commentIcon {
+        margin-top: 7.5%;
+        margin-left: 11%;
+        color: white;
+    }
+
+    .txtReference {
+        color: white;
+        margin-top: -16.8%;
+        margin-left: 25%;
+        width: 146px;
+    }
+
+    .txtReferenceParagraph {
+        width: 146px;
+    }
+    
+    .btnDeleteDiv {
+        margin-top: 6%;
+        margin-left: 43%;
+        border: none;      
+    }
+
+}
+
+@media (max-width: 768px) {
+    .box {
+        width: 540px;
+    }
+    .totalIncome {
+        width: 479px;
+        font-size: 16px;
+        padding-top: 1.5%;
+    }
+    .container {
+        display: block;
+        width: 768px;
+    }
+
+    .header {
+        width: 100%;
+    }
+    
+    .headerDiv {
+        width: 430px;
+    }
+
+    .Form {
+        display: flex;
+        //background-color: #242324;
+        margin-top: 2%;
+        margin-left: 5%;
+        margin-right: 0%;
+        width: 250px;
+    }
+
+    form {
+        width: 250px;
+    }
+    
+    
+    .container {
+        display: block;
+        width: 250px;
+        margin-left: 19%;
+        //width: 109.5%;
+    }
+    
+    input {
+        border: none;
+        margin-top: 5%;
+        width: 250px;
+        height: 20px;
+        padding-left: 5%;
+    }
+    
+    
+    textarea {
+        border: none;
+        width:250px;
+        height: 50px;
+        padding-left: 5%;
+        margin-top: 5%;
+        resize: none;
+    }
+
+    select {
+        border: none;
+        margin-left: 52.641%;
+        margin-top: 5%;
+        height: 30px;
+    }
+    
+    button {
+        margin-top: 5%;
+        padding-top: 1%;
+        width: 40%;
+        height: 30px;
+        border: none;
+        border-radius: 20px;
+        background-color: cornflowerblue;
+        color: white;
+    }
+
+    .incomeContainer {
+        display: block;
+        width: 100%;
+        height: 147px;
+    }
+
+    .Income {
+        display: block;
+        background-color: #242324;
+        margin-top: 3.5%;
+        width: 94%;
+        height: initial;
+        border-radius: 30px;
+    }
+
+    .circle {
+        display: none;
+    }
+
+    .SalaryTitle {
+        display: block;
+        width: 100px;
+        height: 10%;
+        margin-top: 0%;
+        margin-bottom: 0%;
+        margin-left: 33%;
+        font-size: 13px;
+        text-align: justify;
+        font-weight: bold;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .SalaryParagraph {
+        color: white; 
+        width:100px;
+        margin-top: 0%;
+    }
+
+    .amount {
+        display: flex;
+        margin-top: 8%;
+        margin-left: 10.5%;
+    }
+
+    .txtAmount {
+        margin-top: -1%;
+        margin-left: -2%;
+        color: white;
+    }
+
+    .dateIcon {
+        margin-top: -16.3%;
+        margin-left: 41%;
+        color: white;
+    }
+    
+    .txtDate {
+        margin-top: -15.7%;
+        margin-left: 53%;
+        color: white;
+        width: 100px;
+    }
+
+    .commentIcon {
+        margin-top: 7.5%;
+        margin-left: 11%;
+        color: white;
+    }
+
+    .txtReference {
+        color: white;
+        margin-top: -16.8%;
+        margin-left: 25%;
+        width: 146px;
+    }
+
+    .txtReferenceParagraph {
+        width: 146px;
+    }
+    
+    .btnDeleteDiv {
+        margin-top: 6%;
+        margin-left: 43%;
+        border: none;      
+    }
+
 }
