new component added

--- a/src/app/component/layout/layout.component.scss
+++ b/src/app/component/layout/layout.component.scss
@@ -1,6 +1,6 @@
 .menu {
     //margin: auto;
-    margin-left: 0%;
+    margin-left: -8%;
     width: 362px;
     height: 640px;
     margin-top: 20px;
@@ -12,6 +12,7 @@
 .content {
     //margin: auto;
     margin-left: 0%;
+    margin-right: -7%;
     background-color: #36304A;
     width: 1123px;
     height: 640px;
