--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -5,6 +5,7 @@
         <li><a [routerLink]="['/Layout/Transaction']"><i class="icon fa fa-credit-card-alt"></i>View Transactions</a></li>
         <li><a [routerLink]="['/Layout/Income']"><i class="icon fa fa-money"></i>Incomes</a></li>
         <li><a [routerLink]="['/Layout/Expense']"><i class="icon fa fa-cc-mastercard"></i>Expenses</a></li>
+        <li><a [routerLink]="['/Layout/ChangePassword']">Change User Password</a></li>
         <li (click)="logout()"><a [routerLink]="['']"><i class="fa fa-sign-out" style="font-size:24px"></i>Logout</a></li>
     </ul>
 </div>
