--- a/src/app/component/delete-user/delete-user.component.html
+++ b/src/app/component/delete-user/delete-user.component.html
@@ -3,7 +3,7 @@
     <button type="button" class="btn-close" aria-label="Close" (click)="close()"></button>
 </div>
 <div class="modal-body">
-    <form [formGroup]="userPasswordForm">
+    <form [formGroup]="deleteUserForm">
         <div class="form-group">
         <label for="exampleInputPassword1">Select an option</label>
             <select formControlName="userId" class="form-select" aria-label="Default select example">
@@ -11,12 +11,9 @@
                 <option value="{{item.userID}}" *ngFor="let item of userList">{{item.firstName+' '+item.lastName}}</option>
             </select>
         </div>
+        <br>
         <div class="form-group">
-          <label for="exampleInputPassword1">Password</label>
-          <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div><br>
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary" (click)="changePassword()">Change</button>
+            <button type="submit" class="btn btn-primary">Delete User</button>
         </div>
     </form>
 </div>
