--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -5,7 +5,8 @@
         <li><a [routerLink]="['/Layout/Transaction']"><i class="icon fa fa-credit-card-alt"></i>View Transactions</a></li>
         <li><a [routerLink]="['/Layout/Income']"><i class="icon fa fa-money"></i>Incomes</a></li>
         <li><a [routerLink]="['/Layout/Expense']"><i class="icon fa fa-cc-mastercard"></i>Expenses</a></li>
-        <li><a [routerLink]="['/Layout/ChangePassword']">Change User Password</a></li>
+        <li><a (click)="openModal()"><i class="icon2"></i>Change User Password</a></li>
+        <li><a (click)="openDeleteUser()">Delete User</a></li>
         <li (click)="logout()"><a [routerLink]="['']"><i class="fa fa-sign-out" style="font-size:24px"></i>Logout</a></li>
     </ul>
 </div>
