--- a/src/app/component/transaction/transaction.component.html
+++ b/src/app/component/transaction/transaction.component.html
@@ -1,69 +1,37 @@
-<div class="container">
-    <div class="IncomeContainer">
-        <div class="headerDiv">
-            <h1 class="header">Incomes</h1>
-        </div>
-        <div class="incomeContainer OverFlow" id="style-3">
-            <div class="Income" *ngFor="let dataList of incomeList">
-                <div class="circle"></div>
-                <div class="SalaryTitle">
-                    <p class="SalaryParagraph">{{dataList.salaryTitle}}</p>
+<div class="row pb-3">
+    <h1>Income</h1>
+    <div class="col-lg-3 col-sm-6" *ngFor="let item of incomeList">
+        <div class="row p-2">
+            <div class="col-12 p-1">
+                <div class="card border 0 p-3 shadow border-top border-5 rounded">
+                    <div class="card-body pb-0" style="height: 250px;">
+                        <div class="pl-1">
+                            <p class="card-title h5 text-dark opacity-75 text-center">Salary Title: {{item.salaryTitle}}</p>
+                            <p class="card-title h5 text-dark opacity-75 text-center">Salary Amount: {{item.salaryAmount}} USD</p>
+                            <p class="card-title h5 text-dark opacity-75 text-center">Category: {{item.categories.categoryName}}</p>
+                            <p class="card-title h5 text-dark opacity-75 text-center">Comment: {{item.reference}}</p>   
+                        </div>            
+                    </div>
                 </div>
-                <div class="amount">
-                    <i class="fa fa-dollar" style="color: white;"></i>
-                    <p class="txtAmount">{{dataList.salaryAmount}}</p>
-                </div>
-                <div class="dateIcon">
-                    <i class="fa fa-calendar"></i>
-                </div>
-                <div class="txtDate">
-                    <p style="width: 100px;">{{dataList.date}}</p>
-                </div>
-                <div class="commentIcon">
-                    <i class="fa fa-comment"></i>
-                </div>
-                <div class="txtReference">
-                    <p class="txtReferenceParagraph">{{dataList.reference}}</p>
-                </div>
-                <!--<div class="btnDeleteDiv">
-                    <button class="deleteBtn" (click)="deleteIncome(dataList.incomeId)">
-                        <i class="fa fa-trash" style="color:black;font-size:24px;"></i>
-                    </button>
-                </div>-->
             </div>
         </div>
     </div>
-    <div class="ExpenseContainer">
-        <div class="headerDiv">
-            <h1 class="header">Expenses</h1>
-        </div>
-        <div class="expenseContainer OverFlow" id="style-3">
-            <div class="Expense" *ngFor="let dataList of expenseList">
-                <div class="circle"></div>
-                <div class="ExpenseTitle">
-                    <p class="ExpenseParagraph">{{dataList.expenseTitle}}</p>
+</div>
+<div class="row pb-3">
+    <h1 class="text-">Expense</h1>
+    <div class="col-lg-3 col-sm-6" *ngFor="let item of expenseList">
+        <div class="row p-2">
+            <div class="col-12 p-1">
+                <div class="card border 0 p-3 shadow border-top border-5 rounded">
+                    <div class="card-body pb-0" style="height: 250px;">
+                        <div class="pl-1">
+                            <p class="card-title h5 text-dark opacity-75 text-center">Salary Title: {{item.expenseTitle}}</p>
+                            <p class="card-title h5 text-dark opacity-75 text-center">Salary Amount: {{item.expenseAmount}} USD</p>
+                            <p class="card-title h5 text-dark opacity-75 text-center">Category: {{item.expenseCategories.categoryName}}</p>
+                            <p class="card-title h5 text-dark opacity-75 text-center">Comment: {{item.expenseReference}}</p>   
+                        </div>            
+                    </div>
                 </div>
-                <div class="amount">
-                    <i class="fa fa-dollar" style="color: white;"></i>
-                    <p class="txtAmount">{{dataList.expenseAmount}}</p>
-                </div>
-                <div class="dateIcon">
-                    <i class="fa fa-calendar"></i>
-                </div>
-                <div class="txtDate">
-                    <p style="width: 100px;">{{dataList.expenseDate}}</p>
-                </div>
-                <div class="commentIcon">
-                    <i class="fa fa-comment"></i>
-                </div>
-                <div class="txtReference">
-                    <p class="txtReferenceParagraph">{{dataList.expenseReference}}</p>
-                </div>
-                <!--<div class="btnDeleteDiv">
-                    <button class="deleteBtn" (click)="deleteExpense(dataList.expenseID)">
-                        <i class="fa fa-trash" style="color:black;font-size:24px;"></i>
-                    </button>
-                </div>-->
             </div>
         </div>
     </div>
