--- a/src/app/component/delete-user/delete-user.component.html
+++ b/src/app/component/delete-user/delete-user.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title">Change User Password</h4>
+    <h4 class="modal-title">Delete User</h4>
     <button type="button" class="btn-close" aria-label="Close" (click)="close()"></button>
 </div>
 <div class="modal-body">
