--- a/src/app/component/income/income.component.html
+++ b/src/app/component/income/income.component.html
@@ -1,54 +1,20 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<div class="box">
-    <div class="headerDiv">
-        <h1 class="header">Incomes</h1>
-    </div>
-    <div class="totalIncome">
-        <p class="Padding">Total Income:${{totalIncome}}</p>
-    </div>
-    <div class="container">
-        <div class="Form">
-            <form [formGroup]="incomeForm" enctype="multipart/form-data" (ngSubmit)="addIncome()">
-                <input type="text" formControlName="salaryTitle" placeholder="Salary Title"><br>
-                <input type="text" formControlName="salaryAmount" placeholder="Salary Amount"><br>
-                <input type="text" formControlName="date" onfocus="(this.type='date')" placeholder="Enter A Date"><br>
-                <select formControlName="categoryID">
-                    <option value="option1" selected>Select your Option</option>
-                    <option value="{{item.categoryID}}" *ngFor="let item of categoryList">{{item.categoryName}}</option>
-                </select><br>
-                <textarea type="text" formControlName="reference" placeholder="Add a Reference"></textarea><br>
-                <button type="submit"><i class="fa fa-plus"></i>Add</button>
-            </form>
-        </div>
-        <div class="incomeContainer OverFlow" id="style-3">
-            <div class="Income" *ngFor="let dataList of incomeList">
-                <div class="circle"></div>
-                <div class="SalaryTitle">
-                    <p class="SalaryParagraph">{{dataList.salaryTitle}}</p>
-                </div>
-                <div class="amount">
-                    <i class="fa fa-dollar" style="color: white;"></i>
-                    <p class="txtAmount">{{dataList.salaryAmount}}</p>
-                </div>
-                <div class="dateIcon">
-                    <i class="fa fa-calendar"></i>
-                </div>
-                <div class="txtDate">
-                    <p style="width: 100px;">{{dataList.date}}</p>
-                </div>
-                <div class="commentIcon">
-                    <i class="fa fa-comment"></i>
-                </div>
-                <div class="txtReference">
-                    <p class="txtReferenceParagraph">{{dataList.reference}}</p>
-                </div>
-                <div class="btnDeleteDiv">
-                    <button class="deleteBtn" (click)="deleteIncome(dataList.incomeId)">
-                        <i class="fa fa-trash" style="color:black;font-size:24px;"></i>
-                    </button>
+<div class="row pb-3">
+    <h1>Total Income: {{totalIncome}} USD</h1>
+    <div class="col-lg-3 col-sm-6" *ngFor="let item of incomeList">
+        <div class="row p-2">
+            <div class="col-12 p-1">
+                <div class="card border 0 p-3 shadow border-top border-5 rounded">
+                    <div class="card-body pb-0" style="height: 250px;">
+                        <div class="pl-1">
+                            <p class="card-title h5 text-dark opacity-75 text-center">Salary Title: {{item.salaryTitle}}</p>
+                            <p class="card-title h5 text-dark opacity-75 text-center">Salary Amount: {{item.salaryAmount}} USD</p>
+                            <p class="card-title h5 text-dark opacity-75 text-center">Category: {{item.categories.categoryName}}</p>
+                            <p class="card-title h5 text-dark opacity-75 text-center">Comment: {{item.reference}}</p>   
+                        </div>            
+                    </div>
+                    <button type="button" class="btn btn-danger" (click)="deleteIncome(item.incomeId)">Delete</button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
