--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,10 +1,17 @@
-<div class="Form">
-    <form [formGroup]="loginForm" enctype="multipart/form-data">
-        <div class="Header"></div>
-        <label class="Margin">Enter your Email or User Name</label><br>
-        <input formControlName="userNameOrEmail" type="text"><br>
-        <label class="Margin">Enter your Password</label><br>
-        <input type="password" formControlName="password"><br>
-        <button class="Margin" (click)="Login()">Login</button>
+<div class="container min-vh-100 d-flex justify-content-center align-items-center">
+    <form [formGroup]="loginForm">
+        <div class="mb-3">
+           <h1 class="text-dark text-lg-center">Login</h1>
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label text-dark">Email address</label>
+            <input type="email" formControlName="userNameOrEmail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        </div>
+        <div class="mb-3">
+            <label for="exampleInputPassword1" class="form-label text-dark">Password</label>
+            <input type="password" formControlName="password" class="form-control" id="exampleInputPassword1">
+        </div>
+        <p><a class="link-opacity-10-hover text-dark" [routerLink]="['/Signup']">Don't have account click here to Signup</a></p>
+        <button type="btn" class="btn btn-primary" (click)="Login()">Login</button>
     </form>
 </div>
