--- a/src/app/component/delete-user/delete-user.component.html
+++ b/src/app/component/delete-user/delete-user.component.html
@@ -13,7 +13,7 @@
         </div>
         <br>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary">Delete User</button>
+            <button type="submit" class="btn btn-primary" (click)="deleteUser()">Delete User</button>
         </div>
     </form>
 </div>
