--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-top: -1%;">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-top:-1%; margin-left:5%">
           <li class="nav-item">
             <a class="nav-link active text-light" aria-current="page" [routerLink]="['/Navbar/DashBoard']">DashBoard</a>
           </li>
@@ -33,8 +33,21 @@
                 <li><a (click)="openDeleteUser()" class="text-dark dropdown-item">Delete User</a></li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link active text-light" (click)="logout()">Logout</a>
+          
+        </ul>
+        <ul class="nav navbar-nav navbar-right" style="margin-top:0%; margin-right:6%">
+          <li class="nav-item dropdown">
+            <div class="container-fluid nav-link dropdown-toggle text-light" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="navbar-brand" href="#">
+                <img [src]="imageUrl" alt="Avatar Logo" style="width:45px;" class="rounded-pill"> 
+              </a>
+            </div>
+            <ul class="dropdown-menu">
+                <li><a (click)="openChangePassword()" class="nav-link active text-dark">Change Password</a></li>
+                <li class="nav-item">
+                  <a class="nav-link active text-dark" (click)="logout()">Logout</a>
+                </li>
+            </ul>
           </li>
         </ul>
       </div>
