--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -4,7 +4,7 @@
            <h1 class="text-dark text-lg-center">Login</h1>
         </div>
         <div class="mb-3">
-            <label for="exampleInputEmail1" class="form-label text-dark">Email address</label>
+            <label for="exampleInputEmail1" class="form-label text-dark">Email or Username</label>
             <input type="email" formControlName="userNameOrEmail" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         </div>
         <div class="mb-3">
