--- a/src/app/component/navbar/navbar.component.html
+++ b/src/app/component/navbar/navbar.component.html
@@ -2,7 +2,7 @@
     <div class="container-fluid">
       <a class="navbar-brand text-light" [routerLink]="['/Navbar/DashBoard']">DashBoard</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon text-light"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-top:-1%; margin-left:5%">
@@ -43,10 +43,15 @@
               </a>
             </div>
             <ul class="dropdown-menu">
-                <li><a (click)="openChangePassword()" class="nav-link active text-dark">Change Password</a></li>
-                <li class="nav-item">
-                  <a class="nav-link active text-dark" (click)="logout()">Logout</a>
-                </li>
+              <li>
+                <a class="nav-link active text-dark" (click)="openChangeProfile()">Change Profile</a>
+              </li>
+              <li>
+                <a (click)="openChangePassword()" class="nav-link active text-dark">Change Password</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active text-dark" (click)="logout()">Logout</a>
+              </li>
             </ul>
           </li>
         </ul>
