--- a/src/app/component/income/income.component.html
+++ b/src/app/component/income/income.component.html
@@ -1,9 +1,9 @@
 <div class="row pb-3">
     <h1>Total Income: {{totalIncome}} USD</h1>
-    <div class="col-lg-3 col-sm-6" *ngFor="let item of incomeList">
+    <div class="col-lg-3 col-sm-6" style="width: 24rem;" *ngFor="let item of incomeList">
         <div class="row p-2">
             <div class="col-12 p-1">
-                <div class="card border 0 p-3 shadow border-top border-5 rounded" style="width: 20rem;">
+                <div class="card border 0 p-3 shadow border-top border-5 rounded">
                     <div class="card-body text-center" style="height: 250px;">
                         <div class="pl-1">
                             <p class="card-title text-center text-nowrap text-dark  opacity-75">Salary Title: {{item.salaryTitle}}</p>
